# tabelle

./: CMakeLists.txt  laender.csv
res/: laender.txt  sort.csv  sortStrings.csv
src/: file.c  file.h  main.c
src/cli/: cli.c  cli.h
src/cli/commands/: printCommand.c  printCommand.h  saveCommand.c  saveCommand.h  setCommand.c  setCommand.h  sortCommand.c  sortCommand.h  sumColCommand.c  sumColCommand.h
src/table/: modify.c  modify.h  parse.c  parse.h  print.c  print.h  sort.c  sort.h  types.h
test/: test_file.c  test_main.c  test_table.c
test/res/: tricky.csv  uneven.csv  valid.csv
